# Task_2

./: CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt
lib/memory/: CMakeLists.txt
lib/memory/include/: memory.h
lib/memory/source/: memory.c
lib/multiple/: CMakeLists.txt
lib/multiple/include/: processing.h
lib/multiple/source/: multiple.c
lib/one/: CMakeLists.txt
lib/one/include/: processing.h
lib/one/source/: one.c
tests/: CMakeLists.txt
tests/data/: input.txt  output.txt
tests/unit/: CMakeLists.txt
tests/unit/source/: memory.cpp  multiple.cpp  one.cpp
